tests/ui/pattern/non-structural-match-types.thir.stderr
error: `{closure@$DIR/non-structural-match-types.rs:12:17: 12:19}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:12:9
   |
LL |         const { || {} } => {}
   |         ^^^^^^^^^^^^^^^

error: `{async block@$DIR/non-structural-match-types.rs:15:17: 15:25}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:15:9
   |
LL |         const { async {} } => {}
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

